--- a/sequence _test.html
+++ b/sequence _test.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html lang=ja>
 <head>
-    <title>Magic at Home</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <title>シーケンス　テスター</title>
+    <link rel="stylesheet" type="text/css" href="sequence_test.css">
     <meta charset="utf-8">
     
     <style>
