--- a/sequence _test.html
+++ b/sequence _test.html
@@ -206,6 +206,8 @@
             document.getElementById("indexId").textContent = text;
             const messages = text.split('\n');
             console.log(messages);
+            const block = messages.split('\t');
+            console.log(block);
         }
          
 
