--- a/sequence _test.html
+++ b/sequence _test.html
@@ -111,7 +111,7 @@
         */
         loadSequence();
 
-        document.getElementById("indexId").textContent = "最終更新：";
+        document.getElementById("indexId").textContent = '最終更新：';
         
         // iframe のセットアップ
         function onYouTubeIframeAPIReady() {
