--- a/sequence _test.html
+++ b/sequence _test.html
@@ -183,7 +183,7 @@
             }
         }
     
-        async function sendSerial(var text2send) {
+        async function sendSerial(text2send) {
             //var text = document.getElementById('sendInput').value;
             //document.getElementById('sendInput').value = "";
 
