--- a/sequence _test.html
+++ b/sequence _test.html
@@ -111,7 +111,7 @@
         */
         loadSequence();
 
-        document.getElementById("indexId").textContent = '最終更新：送信内容ログ';
+        document.getElementById("indexId").textContent = '最終更新：タイムラグ調整A';
         
         // iframe のセットアップ
         function onYouTubeIframeAPIReady() {
