--- a/sequence_test.html
+++ b/sequence_test.html
@@ -125,7 +125,7 @@
         console.log("*** Loading Sequence File 2 ***");
         loadSequence2();
 
-        document.getElementById("indexId").textContent = '最終更新：タイムラグ調整C';
+        document.getElementById("indexId").textContent = '最終更新：動画２つ目追加';
         
         // iframe のセットアップ
         function onYouTubeIframeAPIReady() {
