--- a/sequence_test.html
+++ b/sequence_test.html
@@ -206,7 +206,7 @@
                 }
                 console.log('now Index:' + idx2);
                 checkTime2 = setInterval(() => {
-                    currentTime2 = Math.floor(player.getCurrentTime()*100)/100; // 再生位置を取得
+                    currentTime2 = Math.floor(player2.getCurrentTime()*100)/100; // 再生位置を取得
                     //console.log(currentTime);
                     document.getElementById("timeId2").textContent = currentTime2;
 
